# SANS---Find-Evil-_-AI-Hackathon

./: .gitignore  ACCURACY_REPORT.md  AGENT_CAPABILITY_EXPANSION_REPORT.md  DFIR_AGENT_PLAYBOOK.md  LICENSE  README.md  SANS Find Evil_ Demo  SECURITY.md  install.sh  requirements.txt
agent/: README.md  pyproject.toml
agent/dfir_agent/: __init__.py  capability_matrix.py  case_manifest.py  coverage.py  decisions.py  enrichment.py  graph.py  manifest.py  manifest_intake.py  mcp_client.py  narrate.py  scoring.py  state.py  verification.py
agent/eval/: build_manifest.py  capabilities.py  coverage.py  run_agent.py  run_case.py  run_from_evidence.py  score_profile.py
agent/tests/: test_analyzers.py  test_capability_matrix.py  test_case_manifest.py  test_classification_fixes.py  test_coverage.py  test_deep_scan_node.py  test_file_detect_node.py  test_intake_manifest.py  test_no_case_iocs_in_core.py  test_phase1_hashing.py  test_phase2_java_cache.py  test_phase2_pstree_cmdline.py  test_phase2_rules.py  test_phase3_disk.py  test_phase3_pe_strings.py  test_phase4_registry_config.py  test_phase4_timeline.py  test_phase5_correlation.py  test_phase5_credential_access.py  test_phase6_lateral_graph.py  test_phase6_report.py  test_phase7_dc.py  test_phase7_persistence_exfil.py  test_phase8_cross_host.py  test_phase8_enrichment.py  test_phase9_recall.py  test_phase9_report.py  test_schemas.py  test_score_profile.py  test_scoring.py  test_verification.py
agent/validation_profiles/: srl2015.yml
mcp_server/: .env.example  pyproject.toml
mcp_server/forensic_mcp/: __init__.py  (+7 more)
(+99 files in other folders)
